@@ -1,25 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2009/06/14 17:48:55 joerg Exp $
-include/libsexy/sexy-enum-types.h
-include/libsexy/sexy-icon-entry.h
-include/libsexy/sexy-spell-entry.h
-include/libsexy/sexy-tooltip.h
-include/libsexy/sexy-tree-view.h
-include/libsexy/sexy-url-label.h
-include/libsexy/sexy.h
-lib/libsexy.la
-lib/pkgconfig/libsexy.pc
-share/gtk-doc/html/libsexy/SexyIconEntry.html
-share/gtk-doc/html/libsexy/SexySpellEntry.html
-share/gtk-doc/html/libsexy/SexyTooltip.html
-share/gtk-doc/html/libsexy/SexyTreeView.html
-share/gtk-doc/html/libsexy/SexyUrlLabel.html
-share/gtk-doc/html/libsexy/ch01.html
-share/gtk-doc/html/libsexy/home.png
-share/gtk-doc/html/libsexy/index.html
-share/gtk-doc/html/libsexy/index.sgml
-share/gtk-doc/html/libsexy/left.png
-share/gtk-doc/html/libsexy/libsexy.devhelp
-share/gtk-doc/html/libsexy/libsexy.devhelp2
-share/gtk-doc/html/libsexy/right.png
-share/gtk-doc/html/libsexy/style.css
-share/gtk-doc/html/libsexy/up.png
