@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.6 2021/10/26 10:15:27 nia Exp $
-
-BLAKE2s (libsexy-0.1.11.tar.gz) = 9aff02ea28b4748564bc385fff62397218fa99f113db90fd97d8b53736362b10
-SHA512 (libsexy-0.1.11.tar.gz) = 12ab0d2925b7a025116b8b03d8af3ed471cb60c0225b33d3a312e35acef95afb0fc265de135354883865fbe2338ca3b2d9356b401aa3bce4b532ec50a32067ca
-Size (libsexy-0.1.11.tar.gz) = 391565 bytes
