@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2540 2024/04/17 14:29:32 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2541 2024/04/17 14:30:34 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4195,3 +4195,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed editors/obby [wiz 2024-04-17]
 	Removed devel/libsigc++1 [wiz 2024-04-17]
 	Removed devel/libsexymm [wiz 2024-04-17]
+	Removed devel/libsexy [wiz 2024-04-17]
